--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ li {
   font-size:16px;
   font-weight: 100;
 line-height: 19px;
+text-transform: capitalize;
 }
 .weather-app-wrapper {
 max-width:600px;
@@ -50,4 +51,5 @@ width: 64 px;
   position:relative;
   font-size: 16 px;
   top: -34px;
+ 
 }
