--- a/src/style.css
+++ b/src/style.css
@@ -54,5 +54,9 @@ width: 64 px;
   position:relative;
   font-size: 16 px;
   top: -34px;
- 
-}
+ }
+
+ .weather-temperature .active {
+   color: rgb(33,33,33);
+   cursor: default;
+ }
